2008-01-18  Luca Ferretti  <elle.uca@libero.it>

	* programs/Makefile.am:
	* programs/gvfs-cat.c: (cat), (main):
	Add i18n/l10n to gvfs-cat, plus indentation. For details see
	http://mail.gnome.org/archives/gnome-vfs-list/2008-January/msg00020.html

2008-01-18  David Zeuthen  <davidz@redhat.com>

	The volume monitor bits of gphoto2 support. The actual backend
	will follow later. Right now the code is only enabled on Linux,
	need trivial changes to work on other operating systems.

	* hal/ghalvolume.c: (do_update_from_hal_for_camera),
	(update_from_hal), (g_hal_volume_new):
	* hal/ghalvolumemonitor.c: (get_hal_pool),
	(g_hal_volume_monitor_finalize), (get_volumes),
	(mountpoints_changed), (mounts_changed),
	(g_hal_volume_monitor_force_update), (hal_changed),
	(g_hal_volume_monitor_constructor), (find_camera_volume_by_udi),
	(update_cameras):
	* hal/ghalvolumemonitor.h:
	* hal/hal-pool.c: (hal_pool_finalize), (has_cap_only),
	(hal_pool_add_device_by_udi),
	(hal_pool_add_device_by_udi_and_properties), (hal_pool_new):
	* hal/hal-pool.h:

2008-01-17  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Disconnect signal handler, since the data struct we pass
	into the signal handler will be invalid after the mount
	is finished.

2008-01-17  Christian Kellner  <gicmo@gnome.org>

	* common/gmountsource.c:
	* common/gmountsource.h:
	Make g_mount_source_ask_password_async () public and add
	g_mount_source_ask_password_finish (). 

	* daemon/gvfsbackenddav.c: 
	Use g_mount_source_ask_password_async instead of the sync
	version so we don't hang during auth. Few cleanups.

	* programs/gvfs-mount.c: 
	Don't echo the password, if possible.

2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalvolume.c:
        * hal/ghalvolumemonitor.c:
	Initial work on LUKS, from david.

2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsdaemonprotocol.h:
        * client/gdaemonfile.c:
	Add upload operation (requires latest glib)
	